# redwalk

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  configure  redwalk.pc.in
doc/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt
include/src/config/: CMakeLists.txt  macros.hpp  version.hpp
include/src/graph/: graph_base.hpp
libredwalk/: CMakeLists.txt
libredwalk/include/: CMakeLists.txt  config  redwalk
libredwalk/include/src/: redwalk.hpp
libredwalk/include/src/graph/: adjacency_array.hpp
libredwalk/src/: dissimilarity.cpp  paths.cpp  types.hpp
old/: CMakeLists.txt  configure
redwalk-cli/: CMakeLists.txt
redwalk-cli/src/: .redwalk.cpp.swp  CMakeLists.txt  redwalk.cpp
src/: CMakeLists.txt  dissimilarity.hpp  macros.hpp  paths.hpp  redwalk.cpp
src/fastcluster/: CMakeLists.txt
src/redwalk/: CMakeLists.txt  dissimilarity.cpp  dissimilarity.hpp  paths.cpp  paths.hpp
src/redwalk/config/: types.hpp
src/redwalk/fastcluster/: CMakeLists.txt  Dendrogram.hpp  fastcluster.cpp  fastcluster.h  fastcluster_base.h  fastcluster_ext.h
src/redwalk/graph/: adjacency_array.hpp
test/: CMakeLists.txt  unit_tests.cpp
